--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,5 @@ xcuserdata
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
-# Carthage/Checkouts
 
-Carthage/Build
+Carthage
