--- a/Stone/Info.plist
+++ b/Stone/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.4</string>
+	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -30,6 +30,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Brown-Light.otf</string>
+		<string>Brown-Light-Italic.otf</string>
 		<string>Brown-Regular-Alt.otf</string>
 		<string>Brown-Bold.otf</string>
 	</array>
